@@ -1,3 +1,7 @@
+* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
+- Expanded the upper limit of the concat and stdlib Puppet module versions
+- Updated a URL in the README.md
+
 * Wed Feb 20 2019 Adam Yohring <adam.yohrling@onyxpoint.com> - 6.1.1-0
 - Modified class to support configuring SIMP rsync server and SIMP
   rsync client for same machine
